[package]

name = "alpaca"
version = "0.1.0"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>"]
description = "ALPACA is a caller for genomic variants (single nucleotide and small indels) from next-generation sequencing data that uses a novel algebraic approach to incorporate sample based filtering into the calling. This allows to intuitively control the FDR for arbitrary filtering scenarios."
homepage = "https://github.com/johanneskoester/alpaca"
readme = "README.md"
keywords = ["Bioinformatics", "Variant Calling"]
license = "MIT"

[dependencies]
itertools = "*"
peg = "*"
simple_parallel = "*"
argparse = "*"
tempdir = "*"
log = "*"
bio = ">=0.3.7"
rust-htslib = ">=0.4.0"

[[bin]]
name = "alpaca"
test = false
doc = false
