[package]

name = "alpaca"
version = "0.1.0"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>"]
description = "ALPACA is a caller for genomic variants (single nucleotide and small indels) from next-generation sequencing data that uses a novel algebraic approach to incorporate sample based filtering into the calling. This allows to intuitively control the FDR for arbitrary filtering scenarios."
homepage = "https://github.com/johanneskoester/alpaca"
readme = "README.md"
keywords = ["Bioinformatics", "Variant-Calling"]
license = "MIT"

[dependencies]
itertools = "*"
simple_parallel = "*"
argparse = "*"
tempdir = "*"
log = "*"
fern = "*"
bio = ">=0.3.7"

[dependencies.rust-htslib]
git = "https://github.com/christopher-schroeder/rust-htslib.git"

[dependencies.peg]
git = "https://github.com/kevinmehall/rust-peg.git"

[[bin]]
name = "alpaca"
test = false
doc = false
