[package]

name = "alpaca"
version = "0.3.0"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>"]
description = "ALPACA is a caller for genomic variants (single nucleotide and small indels) from next-generation sequencing data that uses a novel algebraic approach to incorporate sample based filtering into the calling. This allows to intuitively control the FDR for arbitrary filtering scenarios."
homepage = "https://github.com/johanneskoester/alpaca"
readme = "README.md"
keywords = ["Bioinformatics", "Variant-Calling"]
license = "MIT"

[dependencies]
bio = "0.8.*"
rust-htslib = ">=0.6.2, <0.7"
clap = {version = "2.9.*", features = ["yaml", "color", "suggestions"]}
itertools = "0.4.*"
log = "0.3.*"
fern = "0.3.*"
cue = "0.1.*"

[[bin]]
name = "alpaca"
test = false
doc = false
